--- a/custom.css
+++ b/custom.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+toast {
+  font-family: 'Lato', sans-serif;
+}
+
 h1 {
     margin-bottom: 40px;
 }
